# SimpleImageViewer

./: .cursorignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  README_CN.md  build.rs  build_errors.txt  build_errors_v2.txt  build_errors_v3.txt  build_errors_v4.txt  build_errors_v5.txt  check_cg  check_errors.txt  cliff.toml  combase.c  cross_platform_optimization_plan.md  full_log.txt  oom-fix.md  psd-todo.md  setup_libraw.ps1  shell.md  vcpkg-configuration.json  vcpkg.json
.cargo/: config.toml  config.toml.UOS  g++-lld-wrap.sh
.github/: release.yml
.github/workflows/: encoding-check.yml  nuget-packages-prune.yml  release.yml
assets/icc/: README.md
docs/: loader-split-plan.md
libraries/libavif-sys/: Cargo.toml  build.rs
libraries/libheif-sys/: Cargo.toml  build.rs
libraries/libjpeg-turbo/: Cargo.toml  build.rs
libraries/libjxl-sys/: Cargo.toml  build.rs
libraries/libraw-sys/: Cargo.toml  build.rs
libraries/libraw-sys-msvc/: Cargo.toml  build.rs
libraries/libtiff/: Cargo.toml  build.rs
libraries/monkey-sdk-sys/: CMakeLists.txt  Cargo.toml  build.rs
libraries/monkey-sdk-sys/src/: lib.rs
libraries/monkey-sdk-sys/wrapper/: monkey_wrapper.cpp
libraries/openexr-core-sys/: Cargo.toml  build.rs
locales/: en.yaml  zh-CN.yaml  zh-HK.yaml  zh-TW.yaml
patched-crates/alsa-sys/: Cargo.toml  build.rs
patched-crates/eframe/: .cargo_vcs_info.json  Cargo.toml  FORK-MERGE.md
patched-crates/egui-wgpu/: Cargo.toml
patched-crates/wgpu-core/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
patched-crates/wgpu-hal/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig
review/: cursor-round1.md  cursor-round2.md  deepseek-round1.md  deepseek-round2.md  round1-synthesis.md  summary.md  trae-round1.md  trae-round2.md
scripts/: analyze_errors.py  apply_split_fixes.py  check-encoding.sh  cleanup_splits.py  dedupe_wave1.py  final_split_fixes.py  finish_compile.py  finish_wave1.py  fix_audio_loop_state.py  fix_audio_wiring.py  fix_decode_image.py  fix_heif_pub_all.py  fix_heif_smart.py  fix_jpegxl_cross.py  fix_libtiff_cross.py  fix_libtiff_load.py  fix_openexr_exports.py  fix_openexr_resplit.py  fix_orchestrator.py  fix_pub_cleanup.py  fix_radiance_imports.py  fix_read_context.py  fix_remaining.py  fix_round2.py  fix_round3.py  fix_round4.py  fix_split_imports.py  fix_split_imports_v2.py  fix_test_modules.py  fix_tiled_imports.py  fix_wave1_final.py  fix_wave1_imports.py  gen_psd_blend_modes_fixtures.py  gen_psd_clipping_fixture.py  gen_psd_compress_fixtures.py  gen_psd_format_fixtures.py  gen_psd_hdr_routing_fixtures.py  generate_8k_ultra_hdr_sample.py  generate_gain_map_test_samples.py  generate_hdr_float_tiff_samples.py  (+17 more)
scripts/ci/: alma8-linux-build.sh  build_cross_aarch64_jammy_image.sh  copy-vcomp140.ps1  install-pkg-config-windows.ps1  vcpkg_inner_focal.sh  vcpkg_inner_focal_x64.sh  vcpkg_inner_jammy.sh
scripts/dev/: apply_libyuv_arm64_row_neon64.py
src/: allocator_tuning.rs  app.rs  audio.rs  audio_helper.cpp  constants.rs  formats.rs  ipc.rs  lib.rs  libtiff_loader.rs  linux_tiff.rs  loader.rs  lru_order.rs  macos_image_io.rs  main.rs  metadata_utils.rs  mmap_util.rs  pixel_inspector.rs  preload_debug.rs  print.rs  psb_blend_gpu_shaders.rs  psb_blend_nonseparable.rs  psb_blend_nonseparable_full.rs  psb_blend_separable.rs  psb_cmyk_cms.rs  psb_cmyk_simd.rs  psb_color_convert.rs  psb_descriptor.rs  psb_downconvert_simd.rs  psb_hdr_blend.rs  psb_hdr_composite.rs  psb_hdr_flat.rs  psb_hdr_interleave_simd.rs  psb_hdr_main.rs  psb_hdr_routing_tests.rs  psb_hdr_tile_composite.rs  psb_hdr_tiled_flat.rs  psb_hdr_tiled_layers.rs  psb_icc_hdr.rs  psb_layer_blend_gpu.rs  psb_layer_blend_simd.rs  (+31 more)
src/app/: app_methods.rs  background_threads.rs  background_yaml_saver.rs  directory_tree.rs  directory_tree_strip_cache.rs  eframe_app.rs  folder_picker.rs  hdr_pending_dispatch.rs  hdr_pending_work.rs  hdr_prewarm.rs  hdr_status.rs  hdr_vulkan_metadata.rs  hotkeys_ui.rs  image_management.rs  index_cache_permute.rs  input.rs  lifecycle.rs  logic_update.rs  media.rs  metadata_extract.rs  mod.rs  pixel_inspector_ui.rs  preload.rs  preload_hdr_gate.rs  preload_memory.rs  rfd_parent.rs  screensaver_host.rs  tests.rs  tray_handlers.rs  types.rs  view_status.rs
src/audio/: cue.rs  loop_state.rs  mod.rs  norm.rs  player.rs  playlist.rs  run_loop.rs  slots.rs  tests.rs  wasapi.rs
src/context_menu/: io.rs  mod.rs  model.rs  spawn.rs  validate.rs
src/directory_tree_places/: fs.rs  mod.rs  types.rs  unix.rs  windows.rs
src/hdr/: apple_compose_gpu.rs  avif.rs  avif_gain_map_deferred.rs  capabilities.rs  cicp.rs  decode.rs  exr_tiled.rs  gain_map.rs  heif.rs  heif_apple_gain_map.rs  heif_apple_gain_map_compose_simd.rs  heif_apple_gain_map_gpu.rs  icc_primaries_lcms.rs  iso_gain_map_compose_simd.rs  iso_gain_map_compose_simd_avx2.rs  iso_gain_map_frame_reuse.rs  jpeg_compose_gpu.rs  jpeg_gain_map_gpu.rs  jpegxl.rs  jxl_gain_map_deferred.rs  linux_admission.rs  linux_diag.rs  logluv_decode.rs  logluv_uv_row.rs  mod.rs  monitor.rs  mpf.rs  openexr_core_backend.rs  platform.rs  radiance_tiled.rs  raw_demosaic_gpu.rs  renderer.rs  simd_fast_pow.rs  status.rs  surface.rs  tiled.rs  transfer_pow_lut.rs  types.rs  ultra_hdr.rs  ultra_hdr_compose.rs  (+4 more)
src/hotkeys/: io.rs  mod.rs  model.rs  validate.rs
src/libtiff_loader/: constants.rs  decode.rs  handle.rs  load.rs  mmap.rs  mod.rs  orientation.rs  rgba_buffer.rs  scanline.rs  scratch.rs  tests.rs  thumbnail.rs  tiled.rs
src/loader/: decode_cancel.rs  decode_profile.rs  embedded_sdr_fallback.rs  hdr_fallback.rs  metadata.rs  mod.rs  orchestrator.rs  orientation.rs  preview_aspect.rs  preview_caps.rs  psd_osd.rs  raw_osd.rs  (+3 more)
tests/: hdr_format_corpus.rs  hdr_native_dependencies.rs
tools/: make_ico.rs  make_trans.rs  process_aperture_icon.py  recolor_purple.py  render_icon.py  shuffle_aperture_colors.py  split_decode.py
triplets/: arm64-linux-v8a.cmake  arm64-linux.cmake  arm64-uos.cmake  chainload-aarch64-gcc10.cmake  chainload-aarch64-linux.cmake  x64-linux.cmake
(+373 files in other folders)
