[package]
name = "simple-image-viewer"
version = "1.3.8"
edition = "2024"
description = "A high-performance, cross-platform image viewer"
license = "GPL-3.0-only"
build = "build.rs"
default-run = "SimpleImageViewer"

[[bin]]
name = "SimpleImageViewer"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
egui = "0.34"
egui_extras = "0.34"
rust-i18n = "3"
image = { version = "0.25", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "tiff", "tga", "webp", "ico", "pnm", "hdr", "avif", "qoi", "exr",
] }
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3", "flac", "wav", "vorbis", "symphonia-mp3", "symphonia-flac", "symphonia-wav", "symphonia-vorbis", "symphonia-aac"] }
ape-decoder = "0.3.2"
lofty = "0.23"
encoding_rs = "0.8"
rfd = "0.17"
walkdir = "2"
jwalk = "0.8"
# tiff = "0.11" // Removed in favor of libtiff via libloading on Linux and WIC/ImageIO elsewhere
crossbeam-channel = "0.5"
rayon = "1.10"
log = "0.4"
flexi_logger = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
font-kit = "0.14"
kamadak-exif = "0.6.1"
clipboard-rs = "0.3"
wallpaper = "3.2.0"
interprocess = "2.4.0"
trash = "5"
psd = "0.3"
sysinfo = { version = "0.35", default-features = false, features = ["system"] }
heic = "0.1"
xmpkit = { version = "0.1", default-features = false, features = ["gif", "jpeg", "png", "psd", "tiff", "webp"] }
quick-xml = "0.39"
wgpu = { version = "29", default-features = false, features = ["dx12", "vulkan", "metal", "wgsl"] }
memmap2 = "0.9"
mimalloc = "0.1.48"
moka = { version = "0.12.15", features = ["sync"] }

[features]
# Feature for Windows 7 compatibility (ANGLE bridge)
legacy_win7 = ["wgpu/gles", "wgpu/angle"]
# Diagnostic tools for tiled rendering (green borders and OSD stats)
tile-debug = []

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
winreg = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Imaging",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"
tiff = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"

[target.'cfg(not(target_os = "windows"))'.dependencies]
printpdf = { version = "0.9.1", features = ["images"] }

# Build-time dependencies: only needed on Windows for PE resource embedding
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# image is needed by build.rs on all platforms for PNG→ICO conversion
[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
