[package]
name = "simple-image-viewer"
version = "1.5.8"
edition = "2024"
description = "A high-performance, cross-platform image viewer"
license = "GPL-3.0-only"
build = "build.rs"
default-run = "SimpleImageViewer"

[[bin]]
name = "SimpleImageViewer"
path = "src/main.rs"

[dependencies]
rand = "0.8"
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "wgpu",
    "wayland",
    "x11",
] }
rust-i18n = "3"
egui_extras = "0.34"
# AVIF decode/encode: use libavif (`avif-native`), not `image`'s `avif` (ravif — bloated, encode-only there).
image = { version = "0.25", default-features = false, features = [
    "png", "gif", "bmp", "tga", "webp", "ico", "pnm", "hdr", "qoi",
] }
parking_lot = "0.12"
rodio = { version = "0.22", default-features = false, features = ["playback", "mp3", "flac", "wav", "vorbis", "symphonia-mp3", "symphonia-flac", "symphonia-wav", "symphonia-vorbis", "symphonia-aac"] }
symphonia = { version = "0.5", features = ["all"] }
lofty = "0.23"
encoding_rs = "0.8"
rfd = "0.17"
walkdir = "2"
jwalk = "0.8"
# tiff = "0.11" // Removed in favor of libtiff via libloading on Linux and WIC/ImageIO elsewhere
crossbeam-channel = "0.5"
rayon = "1.10"
log = "0.4"
flexi_logger = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
font-kit = "0.14"
ttf-parser = "0.25"
kamadak-exif = "0.6.1"
clipboard-rs = "0.3"
wallpaper = "3.2.0"
interprocess = "2.4.0"
trash = "5"
psd = "0.3"
sysinfo = { version = "0.35", default-features = false, features = ["system"] }
xmpkit = { version = "0.1", default-features = false, features = ["gif", "jpeg", "png", "psd", "tiff", "webp"] }
quick-xml = "0.39"
wgpu = { version = "29", default-features = false, features = ["dx12", "vulkan", "metal", "wgsl"] }
memmap2 = "0.9"
mimalloc = "0.1.48"
moka = { version = "0.12.15", features = ["sync"] }
pollster = "0.4.0"
libraw-sys = { path = "libraries/libraw-sys" }
monkey-sdk-sys = { path = "libraries/monkey-sdk-sys" }
libjpeg-turbo = { path = "libraries/libjpeg-turbo" }
libtiff-viewer = { path = "libraries/libtiff" }
openexr-core-sys = { path = "libraries/openexr-core-sys" }
libavif-sys = { path = "libraries/libavif-sys", optional = true }
libheif-sys = { path = "libraries/libheif-sys", optional = true }
libjxl-sys = { path = "libraries/libjxl-sys", optional = true }
bytemuck = "1.25.0"
miniz_oxide = "0.8.9"

[features]
# OpenEXR + AVIF/HEIF/JPEG XL native HDR paths are on by default so CI and release
# builds exercise the full format set without extra --features flags.
default = ["openexr-core", "hdr-modern-formats"]
# Feature for Windows 7 compatibility (ANGLE bridge)
legacy_win7 = ["wgpu/gles", "wgpu/angle"]
# Diagnostic tools for tiled rendering (green borders and OSD stats)
tile-debug = []
# Official OpenEXRCore C backend for EXR decoding.
openexr-core = []
avif-native = ["dep:libavif-sys"]
heif-native = ["dep:libheif-sys"]
jpegxl = ["dep:libjxl-sys"]
hdr-modern-formats = ["avif-native", "heif-native", "jpegxl"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
winreg = "0.11"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"
core-foundation = "0.10"
foreign-types = "0.5"
tiff = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]

[target.'cfg(not(target_os = "windows"))'.dependencies]
printpdf = { version = "0.9.1", features = ["images"] }

# Build-time dependencies: only needed on Windows for PE resource embedding
[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

# image is needed by build.rs on all platforms for PNG→ICO conversion
[build-dependencies]
cc = "1.2.60"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "ico"] }

[patch.crates-io]
egui-wgpu = { path = "patched-crates/egui-wgpu" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
# Do NOT strip symbols: on MSVC targets `strip = true` deletes the .pdb
# entirely, making crash dumps useless.  `strip = "debuginfo"` keeps the
# .pdb but strips DWARF from the binary (relevant for cross-compiled ELF).
# The .pdb is NOT shipped to users but archived separately in CI.
strip = "debuginfo"

[profile.dev]
opt-level = 0

[dev-dependencies]
naga = { version = "29.0.1", default-features = false, features = ["wgsl-in"] }
